SUBDIRS = src

EXTRA_DIST = bin/eChan.conf \
             include/BotCService.h \
             include/Bot.h \
             include/Buffer.h \
             include/ChannelClient.h \
             include/Channel.h \
             include/Client.h \
             include/ConfigParser.h \
             include/debug.h \
             include/InBuffer.h \
             include/Msg_AC.h \
             include/Msg_B.h \
             include/Msg_C.h \
             include/Msg_CM.h \
             include/Msg_D.h \
             include/Msg_EB.h \
             include/Msg_G.h \
             include/Msg.h \
             include/Msg_J.h \
             include/Msg_K.h \
             include/Msg_L.h \
             include/Msg_M.h \
             include/MsgMonitor.h \
             include/Msg_N.h \
             include/Msg_O.h \
             include/Msg_OM.h \
             include/MsgParseSystem.h \
             include/Msg_P.h \
             include/Msg_Q.h \
             include/Msg_S.h \
             include/MsgSource.h \
             include/Msg_SQ.h \
             include/Msg_T.h \
             include/MsgTokenizer.h \
             include/Network.h \
             include/OutBuffer.h \
             include/OutMsgSystem.h \
             include/P10Tokens.h \
             include/PreServerMsg.h \
             include/Server.h \
             include/SocketException.h \
             include/Socket.h \
             include/ThreadException.h \
             include/Thread.h \
             include/tools.h \
             include/MD5.h \
             include/Crypto.h \
             include/SqlManager.h \
             include/Cache.h \
             docs/bewarep10.txt \
             docs/p10.html \
             src/Thread.cpp

bindir = bin/
